--- a/404.md
+++ b/404.md
@@ -1,14 +1,16 @@
 ---
 layout: splash
-title: Page not found
 permalink: /404.html
+title: 404
+description: Page not found.
 ---
 
 <div class="container">
-  <div class="row">
+  <div class="row pt-4">
     <div class="col-md-12">
-      <h1>404</h1>
-      <p>The page you asked for wasn't found. <a href="/">Go home?</a></p>
+      <h2>{{ site.title }}</h2>
+      <p class="lead"><strong>{{ page.title }}</strong> — {{ page.description }}</p>
+      <p>&larr; <a href="/">Homepage</a></p>
     </div>
   </div>
 </div>
